@startuml
left to right direction
skin rose

package "coleccion" {
    class Main{
        + main(args: String[]): static void
        }
    interface Interface{
        + lecturaArchivo(): void
        + menu(): void
        + buscarPokemon(): void
        + desplegarPoke():void
        + capitalize(string: String):String
        + mostrarTodosPrimeraEvo(cabeza: NodoDoble):void
        + mostrarPokemonTipo(): void
    }
    class Buscador{
    + lecturaArchivo():void
    + menu(): void
    + ordenarPokemonMenorMayor(cabeza: NodoDoble): void
    + desplegarPokemon(pokemon: Pokemon): void
    + BuscarPokemon(): void
    + desplegarPoke(pokemon: NodoDoble): void
    + capitalize(str: String): String
    + MostrarTodosPrimeraEvo(cabeza: NodoDoble): void
    + MostrarPokemonTipo(): void
    }
    class ListaNodoDoble{
    + ListaNodoDoble()
    + IsVacia(): boolean
    + agregarAlInicio(pokemon: Pokemon): void
    + agregarAlFinal(pokemon: Pokemon): void
    + eliminar(pokemon: Pokemon): void
    + imprimirAdelante(): void
    + imprimirAtras() void
    + insertar(pokemon: Pokemon): void
    + tamanio(): int
    + buscarPorId(id: int): NodoDoble
    + buscarPorNombre(nombre: string): NodoDoble
    + buscarPorTipo(tipo: string): NodoDoble
    + setTail(tail: NodoDoble): void
    + getTail(): NodoDoble
    + getCabeza(): NodoDoble
    + ordenarAlfabeticamente(): void
    }
    class NodoDoble{
    - pokemon: Pokemon
    - siguiente: NodoDoble
    - anterior: NodoDoble
    + NodoDoble(pokemon: Pokemon)
    + getPokemon(): Pokemon
    + setPokemon(pokemon: Pokemon): void
    + getSiguiente(): NodoDoble
    + setSiguiente(siguiente: NodoDoble): void
    + getAnterior(): NodoDoble
    + setAnterior(anterior: NodoDoble): void
    }
}
package "model"{
    class Pokemon{
    - id: int
    - nombre: string
    - etapa: string
    - evolucionSiguiente: string
    - evolucionPrevia: string
    - tipo1: string
    - tipo2: string
    + Pokemon(int id, String nombre, String etapa, String evolucionSiguiente, String evolucionPrevia, String tipo1, String tipo2)
    + Pokemon(int id, String nombre, String etapa, String evolucionPrevia, String tipo1, String tipo2)
    + Pokemon(int id, String nombre, String etapa, String tipo1, String tipo2)
    + Pokemon(int id, String nombre, String etapa, String evolucionSiguiente, String evolucionPrevia,String evolucion3, String tipo1, String tipo2)
    + getId(): int
    + getNombre(): string
    + getEtapa(): string
    + getEvolucionSiguiente(): string
    + getEvolucionPrevia(): string
    + getTipo1(): string
    + getTipo2(): string
    }

}

ListaNodoDoble <-- Buscador: implementa <
ListaNodoDoble"1" *-->"0...*" NodoDoble: almacena >
Pokemon"1" <---* "1"NodoDoble: contiene <
Interface <... Buscador: implementa <
Main --> Buscador
@enduml